changement de l'url de mes backlink

--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Le délice des sens</title>
+    <title>Oh My Food</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'/>
+    <link rel='stylesheet' type='text/css' media='screen' href="css/style.css"/>
     <link rel="stylesheet" href="css/normalize.css"/>
     <script src="https://kit.fontawesome.com/d0b8cf9251.js" crossorigin="anonymous"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
     </style>
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon_io/site.webmanifest">
 </head>
 
 <body>
 
     <header class="header-restaurant">
-        <a href="/Users/hugocadenat/Documents/Formation_dév_web/projet3/index.html" class="back__link">
+        <a href="https://hugocdnt.github.io/ohmyfood/" class="back__link">
             <i class="fa-solid fa-arrow-left"></i>
         </a>
         <h1 class="logo">ohmyfood</h1>
