--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -16,7 +16,7 @@
 <body>
 
     <header class="header-restaurant">
-        <a href="../index.html" class="back__link">
+        <a href="/" class="back__link">
             <i class="fa-solid fa-arrow-left"></i>
         </a>
         <h1 class="logo">ohmyfood</h1>
