--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </li>
 
                 <li>
-                    <a href="#" class="no-decoration">
+                    <a href="mailto: contact@ohmyfood.com" class="no-decoration">
                         <p class="text--white">Contact</p>
                     </a>
                 </li>
