--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -187,7 +187,7 @@
             </li>
 
             <li>
-                <a href="#" class="no-decoration">
+                <a href="mailto: contact@ohmyfood.com" class="no-decoration">
                     <p class="text--white">Contact</p>
                 </a>
             </li>
