--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -37,13 +37,13 @@
         <form class="location">
             <p class="flex-row flex-centre">
                 <i class="fas fa-map-marker-alt"></i>
-                <label for="search"></label>
+                <label for="town"></label>
                 <input type="search" name="search" id="town" placeholder="Paris, Belleville">
             </p>
         </form>
 
         <section class="menu">
-            <h2>Réservez le menu qui vous convient</h1>
+            <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
             <button class="button__action">Explorer nos restaurants</button>
         </section>
@@ -74,7 +74,7 @@
 
                 <article class="card card-tall">
                 <a href="la-palette-du-gout.html">
-                        <span class="badge__new"><p>Nouveau</p></span>
+                        <span class="badge__new">Nouveau</span>
                         <img src="images/restaurants/la-palette-du-gout.jpg" alt="">
 
                         <div class="card-tall--heading">
@@ -93,8 +93,8 @@
 
                 <article class="card card-tall rounded-bottom rounded-top">
                     <a href="la-note-enchantee.html">
-                        <span class="badge__new"><p>Nouveau</p></span>
-                        <img src="images/restaurants/la-note-enchantee.jpg">
+                        <span class="badge__new">Nouveau</span>
+                        <img src="images/restaurants/la-note-enchantee.jpg" alt="">
                         <div class="card-tall--heading">
                             <div class="card-tall--heading--texte">
                                 <h3>La note enchantée</h3>
@@ -111,7 +111,7 @@
 
                 <article class="card card-tall rounded-bottom rounded-top">
                     <a href="a-la-francaise.html">
-                        <img src="images/restaurants/a-la-francaise.jpg" alt="" class="rounded-top">
+                        <img src="images/restaurants/a-la-francaise.jpg" alt="">
                         <div class="card-tall--heading">
                             <div class="card-tall--heading--texte">
                                 <h3>A la française</h3>
@@ -171,7 +171,7 @@
                 </li>
 
                 <li>
-                    <a href="mailto: contact@ohmyfood.com" class="no-decoration">
+                    <a href="mailto:contact@example.com" class="no-decoration">
                         <p class="text--white">Contact</p>
                     </a>
                 </li>
