Ajout des alt de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <article class="card card-tall">
                 <a href="la-palette-du-gout.html">
                         <span class="badge__new">Nouveau</span>
-                        <img src="images/restaurants/la-palette-du-gout.jpg" alt="">
+                        <img src="images/restaurants/la-palette-du-gout.jpg" alt="Dégustez des classiques de la cuisine française modernisés">
 
                         <div class="card-tall--heading">
                             <div class="card-tall--heading--texte">
@@ -94,7 +94,7 @@
                 <article class="card card-tall rounded-bottom rounded-top">
                     <a href="la-note-enchantee.html">
                         <span class="badge__new">Nouveau</span>
-                        <img src="images/restaurants/la-note-enchantee.jpg" alt="">
+                        <img src="images/restaurants/la-note-enchantee.jpg" alt="Entre terre et mer, venez découvrir des produits d'exception">
                         <div class="card-tall--heading">
                             <div class="card-tall--heading--texte">
                                 <h3>La note enchantée</h3>
@@ -111,7 +111,7 @@
 
                 <article class="card card-tall rounded-bottom rounded-top">
                     <a href="a-la-francaise.html">
-                        <img src="images/restaurants/a-la-francaise.jpg" alt="">
+                        <img src="images/restaurants/a-la-francaise.jpg" alt="Des plats emblématiques de la cuisine française sont à découvrir au restaurant À la française">
                         <div class="card-tall--heading">
                             <div class="card-tall--heading--texte">
                                 <h3>A la française</h3>
@@ -128,7 +128,7 @@
 
                 <article class="card card-tall rounded-bottom rounded-top">
                     <a href="le-delice-des-sens.html">
-                        <img src="images/restaurants/le-delice-des-sens.jpg" alt="" class="rounded-top">
+                        <img src="images/restaurants/le-delice-des-sens.jpg" alt="Des produits d'exception et de saison raviront vos papilles" class="rounded-top">
                         <div class="card-tall--heading">
                             <div class="card-tall--heading--texte">
                                 <h3>Le délice des sens</h3>
