--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -20,7 +20,7 @@
 <body>
 
     <header class="header-restaurant">
-        <a href="https://hugocdnt.github.io/ohmyfood/" class="back__link">
+        <a href="index.html" class="back__link">
             <i class="fa-solid fa-arrow-left"></i>
         </a>
         <h1 class="logo">ohmyfood</h1>
