Suppression des classes inutiles rounded, modification timing loader

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                         <span class="badge__new">Nouveau</span>
                         <img src="images/restaurants/la-palette-du-gout.jpg" alt="Dégustez des classiques de la cuisine française modernisés">
 
-                        <div class="card-tall--heading">
-                            <div class="card-tall--heading--texte">
+                        <div class="card-tall__heading">
+                            <div class="card-tall__heading--texte">
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </div>
@@ -91,12 +91,12 @@
                     </a>
                 </article>
 
-                <article class="card card-tall rounded-bottom rounded-top">
+                <article class="card card-tall">
                     <a href="la-note-enchantee.html">
                         <span class="badge__new">Nouveau</span>
                         <img src="images/restaurants/la-note-enchantee.jpg" alt="Entre terre et mer, venez découvrir des produits d'exception">
-                        <div class="card-tall--heading">
-                            <div class="card-tall--heading--texte">
+                        <div class="card-tall__heading">
+                            <div class="card-tall__heading--texte">
                                 <h3>La note enchantée</h3>
                                 <p>Charonne</p>
                             </div>
@@ -109,11 +109,11 @@
                     </a>
                 </article>
 
-                <article class="card card-tall rounded-bottom rounded-top">
+                <article class="card card-tall">
                     <a href="a-la-francaise.html">
                         <img src="images/restaurants/a-la-francaise.jpg" alt="Des plats emblématiques de la cuisine française sont à découvrir au restaurant À la française">
-                        <div class="card-tall--heading">
-                            <div class="card-tall--heading--texte">
+                        <div class="card-tall__heading">
+                            <div class="card-tall__heading--texte">
                                 <h3>A la française</h3>
                                 <p>Cité rouge</p>
                             </div>
@@ -126,11 +126,11 @@
                     </a>
                 </article>
 
-                <article class="card card-tall rounded-bottom rounded-top">
+                <article class="card card-tall">
                     <a href="le-delice-des-sens.html">
-                        <img src="images/restaurants/le-delice-des-sens.jpg" alt="Des produits d'exception et de saison raviront vos papilles" class="rounded-top">
-                        <div class="card-tall--heading">
-                            <div class="card-tall--heading--texte">
+                        <img src="images/restaurants/le-delice-des-sens.jpg" alt="Des produits d'exception et de saison raviront vos papilles">
+                        <div class="card-tall__heading">
+                            <div class="card-tall__heading--texte">
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>  
                             </div>  
@@ -171,7 +171,7 @@
                 </li>
 
                 <li>
-                    <a href="mailto:contact@example.com" class="no-decoration">
+                    <a href="mailto:contact@ohmyfood.com" class="no-decoration">
                         <p class="text--white">Contact</p>
                     </a>
                 </li>
