Modification du loader (durée et naming)

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 </head>
 <body>
 
-    <div class="loader3">
-        <p class="loader3__item loader3__item--1">o</p>
-        <p class="loader3__item loader3__item--2">h</p>
-        <p class="loader3__item loader3__item--3">m</p>
-        <p class="loader3__item loader3__item--4">y</p>
-        <p class="loader3__item loader3__item--5">f</p>
-        <p class="loader3__item loader3__item--6">o</p>
-        <p class="loader3__item loader3__item--7">o</p>
-        <p class="loader3__item loader3__item--8">d</p>
+    <div class="loader">
+        <p class="loader__item loader__item--1">o</p>
+        <p class="loader__item loader__item--2">h</p>
+        <p class="loader__item loader__item--3">m</p>
+        <p class="loader__item loader__item--4">y</p>
+        <p class="loader__item loader__item--5">f</p>
+        <p class="loader__item loader__item--6">o</p>
+        <p class="loader__item loader__item--7">o</p>
+        <p class="loader__item loader__item--8">d</p>
     </div>
 
     <div class="content">
